Separando e organizando os arquivos CSS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <script src="https://kit.fontawesome.com/8ec406ee8f.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="/css/responsividade.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -71,7 +70,7 @@
             <div class="top"></div>
             <div class="bot"></div>
           </div>
-          <img src="/img/home_man.png"
+          <img src="./assets/img/home_man.png"
             alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador">
         </div>
 
@@ -141,7 +140,7 @@
           <div class="winner">
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
@@ -155,7 +154,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-DevEdu.png" alt="projeto Dev Edu">
+              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -169,7 +168,7 @@
           <div class="winner">
             <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-MpPlant.png" alt="Projeto MP Plant">
+              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto MP Plant">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -188,7 +187,7 @@
         <div class="winner-secundary">
           <div class="winner">
             <div class="img-winner">
-              <img src="/img/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
             </div>
             <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="text-description">
@@ -203,7 +202,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -217,7 +216,7 @@
           <div class="winner">
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -237,7 +236,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
@@ -252,7 +251,7 @@
             <a href="https://astounding-beignet-9fae44.netlify.app/index.html" target="_blank"
               class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-ItRecrutiers.PNG" alt="Projeto IT Recruiters">
+              <img src="./assets/img/projetos/Projeto-ItRecrutiers.PNG" alt="Projeto IT Recruiters">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -267,7 +266,7 @@
             <a href="https://minihackatongrupo6.github.io/projeto-encontre-seu-curso/index.html" target="_blank"
               class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-FindStack.PNG" alt="Projeto Find">
+              <img src="./assets/img/projetos/Projeto-FindStack.PNG" alt="Projeto Find">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -286,7 +285,7 @@
         <div class="winner-secundary">
           <div class="winner">
             <div class="img-winner">
-              <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="text-description">
@@ -301,7 +300,7 @@
           <div class="winner">
             <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -315,7 +314,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -335,7 +334,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
@@ -349,7 +348,7 @@
           <div class="winner">
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -363,7 +362,7 @@
           <div class="winner">
             <a href="https://fmcerqueira79.github.io/StartSe/" class="border-winner" target="_blank"></a>
             <div class="img-winner">
-              <img src="/img/Projeto-GreenChain.jpg" alt="Projeto Green Chain">
+              <img src="./assets/img/projetos/Projeto-GreenChain.jpg" alt="Projeto Green Chain">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -386,7 +385,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-DevEdu.png" alt="Projeto Dev Edu"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/dgleyramos1/grupo7-mini-hackaton" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -411,7 +410,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+                  </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/JailsonJr-BR/Hackaton-StartSE" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -436,7 +436,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-MpPlant.png" alt="Projeto Mp Plant"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+                  </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/Yta-ux/mp_plant" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -459,7 +460,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-GreenChain.jpg" alt="Projeto Green Chain"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-GreenChain.jpg"
+                      alt="Projeto Green Chain"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/fmcerqueira79/StartSe" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -482,7 +484,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-ItRecrutiers.PNG" alt="Projeto It Recrutiers"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-ItRecrutiers.PNG"
+                      alt="Projeto It Recrutiers"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/GGCORDEIRO/Grupo-13.git" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -505,7 +508,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-FindStack.PNG" alt="Projeto Find Stack"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-FindStack.PNG" alt="Projeto Find Stack">
+                  </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/MiniHackatonGrupo6/projeto-encontre-seu-curso"
                       target="_blank">
@@ -532,7 +536,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-FakeNews.PNG" alt="Projeto Fake News"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-FakeNews.PNG" alt="Projeto Fake News">
+                  </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/lRauane/Fake-news-na-saude" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -557,7 +562,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-TechMe.jpg" alt="Projeto Tech Me"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-TechMe.jpg" alt="Projeto Tech Me"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/womoraes/Projeto-educacional.git" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -581,7 +586,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Projeto-TiSolution.png" alt="Projeto Ti Solution"></div>
+                  <div class="img-area"><img src="./assets/img/projetos/Projeto-TiSolution.png"
+                      alt="Projeto Ti Solution"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/matheusOliv23/Hackthon-Startse" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -622,7 +628,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento1.jpeg" alt="Foto de Daniel Viana"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento1.jpeg" alt="Foto de Daniel Viana">
+                  </div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Daniel Viana</h4>
@@ -683,7 +690,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento2.jpg" alt="Foto de Thiago Fuhrmann"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento2.jpg"
+                      alt="Foto de Thiago Fuhrmann"></div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Thiago Fuhrmann</h4>
@@ -745,15 +753,15 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento3.jpg" alt="Foto de John Emerson"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento3.jpg" alt="Foto de John Emerson">
+                  </div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>John Emerson</h4>
                       <p>"Boa iniciativa porém no meu grupo 10 os iniciantes são realmente iniciantes e com pouco tempo
                         para estudar sendo assim não seu para entregar o projeto.
                         Bom a proposta era deles apenas preencher com código html e CSS simples uma pagina que eu já
-                        tinha feito para pratica https://johnmilani7.github.io/natureza/ seria essa pagina porem sem as
-                        tag de img de text e sem a cores para os iniciantes poderem preencher"
+                        tinha feito para pratica."
                       </p>
                     </div>
                     <div class="depoimentos-contact">
@@ -807,7 +815,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento4.jpg" alt="Foto de Ruan Silva"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento4.jpg" alt="Foto de Ruan Silva">
+                  </div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Ruan Silva</h4>
@@ -867,7 +876,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento5.jpg" alt="Foto de Ruan Silva"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento5.jpg" alt="Foto de Ruan Silva">
+                  </div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Carlos Anderson </h4>
@@ -927,7 +937,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento6.jpg" alt="Foto de Walison"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento6.jpg" alt="Foto de Walison"></div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Walison de jesus </h4>
@@ -985,7 +995,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento7.jpeg" alt="Foto de Alef Santos"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento7.jpeg" alt="Foto de Alef Santos">
+                  </div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Alef Santos </h4>
@@ -1043,7 +1054,8 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="/img/Depoimento8.jpg" alt="Foto de Dgley Ramos"></div>
+                  <div class="img-area"><img src="./assets/img/depoimentos/Depoimento8.jpg" alt="Foto de Dgley Ramos">
+                  </div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Dgley Ramos</h4>
@@ -1119,7 +1131,7 @@
           </div>
 
           <div class="border-mid-1">
-            <img src="/img/filipe.png" alt="">
+            <img src="./assets/img/contatos/filipe.png" alt="Foto de Filipe">
           </div>
           <div class="border-mid-2">
             <p>Graduando em Engenharia Mecânica na Federal de Ouro Preto, designer de UI/UX, estudando para me tornar um
@@ -1186,7 +1198,7 @@
           </div>
 
           <div class="border-mid-1">
-            <img src="/img/ronaldo.jpg" alt="">
+            <img src="./assets/img/contatos/ronaldo.jpg" alt="Foto de Ronaldo">
           </div>
           <div class="border-mid-2">
             <p>Técnico em programação de jogos digitais pela ETE Cícero Días. Atualmente Cursando Bacharelado em
@@ -1255,7 +1267,7 @@
           </div>
 
           <div class="border-mid-1">
-            <img src="/img/george.jpg" alt="">
+            <img src="./assets/img/contatos/george.jpg" alt="Foto de George">
           </div>
           <div class="border-mid-2">
             <p>Técnico em Informática pelo IFS. Atualmente cursando o 2º período de Análise e Desenvolvimento de
@@ -1355,8 +1367,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Start owl Carousel -->
-  <script src="/script/setup_owl.js" type="text/javascript"></script>
-  <script src="/script/toggle.js" type="text/javascript"></script>
+  <script src="./assets/script/setup_owl.js" type="text/javascript"></script>
+  <script src="./assets/script/toggle.js" type="text/javascript"></script>
 </body>
 
 </html>
