--- a/subscription.html
+++ b/subscription.html
@@ -1,98 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inscrição Pré-StartSe</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inscrição Pré-StartSe</title>
+    <script
+      src="https://kit.fontawesome.com/8ec406ee8f.js"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="https://kit.fontawesome.com/8ec406ee8f.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="./assets/css/layout/subscription/subscription.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/css/layout/subscription/countdown.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/css/layout/subscription/subs_responsividade.css"
+    />
+  </head>
 
-  <link rel="stylesheet" href="css/subscription.css">
-  <link rel="stylesheet" href="/css/countdown.css">
-  <link rel="stylesheet" href="css/subs_responsividade.css">
-
-
-</head>
-
-<body>
-
-  <main>
-    <section id="home">
-      <div class="text-box">
-        <div class="text">
-          <h1>HACKATHON</h1>
-          <h2 id="subtitle">2ª EDIÇÃO PRÉ-STARTSE</h2>
-          <p>O Pré-StartSe é um evento realizado totalmente por alunos, que não tem nenhum tipo de vinculo oficial com a
-            StartSe, com o intuito de ajudar iniciantes a se preparar de forma prática para o evento Tech Academy.</p>
-        </div>
-        <div class="buttons">
-          <a>INSCREVA-SE
-            NA SEGUNDA EDIÇÃO</a>
-          <a>INSCREVA SUA EQUIPE</a>
-        </div>
-      </div>
-      <div class="img-box">
-        <div class="image">
-          <div class="border-img">
-            <div class="top"></div>
-            <div class="bot"></div>
+  <body>
+    <main>
+      <section id="home">
+        <div class="text-box">
+          <div class="text">
+            <h1>HACKATHON</h1>
+            <h2 id="subtitle">2ª EDIÇÃO PRÉ-STARTSE</h2>
+            <p>
+              O Pré-StartSe é um evento realizado totalmente por alunos, que não
+              tem nenhum tipo de vinculo oficial com a StartSe, com o intuito de
+              ajudar iniciantes a se preparar de forma prática para o evento
+              Tech Academy.
+            </p>
           </div>
-          <img src="/img/inscription_man.png"
-            alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador">
-        </div>
-        <h3> INSCRIÇÕES ENCERRADAS !!! </h3>
-
-        <!--
-        <ul class="countdown">
-          <div class="style-countdown">
-            <div class="circle-1-1"></div>
-            <div class="circle-1-2"></div>
-
-            <div class="circle-2-1"></div>
-            <div class="circle-2-2"></div>
-
-            <div class="circle-3-1"></div>
-            <div class="circle-3-2"></div>
-
-            <div class="days-1 rect"></div>
-            <div class="days-2 rect"></div>
-
-            <div class="hour-1 rect"></div>
-            <div class="hour-2 rect"></div>
-
-            <div class="min-1 rect"></div>
-            <div class="min-2 rect"></div>
-
-            <div class="sec-1 rect"></div>
-            <div class="sec-2 rect"></div>
+          <div class="buttons">
+            <a>INSCREVA-SE NA SEGUNDA EDIÇÃO</a>
+            <a>INSCREVA SUA EQUIPE</a>
           </div>
+        </div>
+        <div class="img-box">
+          <div class="image">
+            <div class="border-img">
+              <div class="top"></div>
+              <div class="bot"></div>
+            </div>
+            <img
+              src="./assets/img/inscription_man.png"
+              alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador"
+            />
+          </div>
+          <h3>NOVAS INSCRIÇÕES EM:</h3>
 
-          <li>
-            <span data-time></span>
-            <div>days</div>
-          </li>
-          <li>
-            <span data-time></span>
-            <div>hours</div>
-          </li>
-          <li>
-            <span data-time></span>
-            <div>min</div>
-          </li>
-          <li>
-            <span data-time></span>
-            <div>sec</div>
-          </li>
-        </ul>
+          <ul class="countdown">
+            <div class="style-countdown">
+              <div class="circle-1-1"></div>
+              <div class="circle-1-2"></div>
 
--->
-      </div>
-    </section>
-  </main>
+              <div class="circle-2-1"></div>
+              <div class="circle-2-2"></div>
 
-  <script type="module" src="./script/script.js"></script>
-</body>
+              <div class="circle-3-1"></div>
+              <div class="circle-3-2"></div>
 
+              <div class="days-1 rect"></div>
+              <div class="days-2 rect"></div>
+
+              <div class="hour-1 rect"></div>
+              <div class="hour-2 rect"></div>
+
+              <div class="min-1 rect"></div>
+              <div class="min-2 rect"></div>
+
+              <div class="sec-1 rect"></div>
+              <div class="sec-2 rect"></div>
+            </div>
+
+            <li>
+              <span data-time></span>
+              <div>days</div>
+            </li>
+            <li>
+              <span data-time></span>
+              <div>hours</div>
+            </li>
+            <li>
+              <span data-time></span>
+              <div>min</div>
+            </li>
+            <li>
+              <span data-time></span>
+              <div>sec</div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <script type="module" src="./assets/script/script.js"></script>
+  </body>
 </html>
