--- a/assets/pages/1ed.html
+++ b/assets/pages/1ed.html
@@ -9,7 +9,7 @@
 
   <script src="https://kit.fontawesome.com/8ec406ee8f.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -62,7 +62,7 @@
           <p>O Pré-StartSe é um evento realizado totalmente por alunos, que não tem nenhum tipo de vinculo oficial com a
             StartSe, com o intuito de ajudar iniciantes a se preparar de forma prática para o evento Tech Academy.</p>
         </div>
-        <a href="./subscription.html" target="_blank">INSCREVA-SE NA SEGUNDA EDIÇÃO</a>
+        <a href="../../subscription.html" target="_blank">INSCREVA-SE NA TERCEIRA EDIÇÃO</a>
       </div>
       <div class="img-box">
         <div class="image">
@@ -70,7 +70,7 @@
             <div class="top"></div>
             <div class="bot"></div>
           </div>
-          <img src="./assets/img/home_man.png"
+          <img src="../img/home_man.png"
             alt="Homem jovem, branco, cabelo curto, usando uma camisa branca, de costas para nós, programando em seu computador">
         </div>
 
@@ -140,7 +140,7 @@
           <div class="winner">
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="../img/projetos/1ed/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
@@ -154,7 +154,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="projeto Dev Edu">
+              <img src="../img/projetos/1ed/Projeto-DevEdu.png" alt="projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -168,7 +168,7 @@
           <div class="winner">
             <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto MP Plant">
+              <img src="../img/projetos/1ed/Projeto-MpPlant.png" alt="Projeto MP Plant">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -187,7 +187,7 @@
         <div class="winner-secundary">
           <div class="winner">
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+              <img src="../img/projetos/1ed/Projeto-MpPlant.png" alt="Projeto Mp Plant">
             </div>
             <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="text-description">
@@ -202,7 +202,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="../img/projetos/1ed/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -216,7 +216,7 @@
           <div class="winner">
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="../img/projetos/1ed/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -236,7 +236,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="../img/projetos/1ed/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
@@ -251,7 +251,7 @@
             <a href="https://astounding-beignet-9fae44.netlify.app/index.html" target="_blank"
               class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-ItRecrutiers.PNG" alt="Projeto IT Recruiters">
+              <img src="../img/projetos/1ed/Projeto-ItRecrutiers.PNG" alt="Projeto IT Recruiters">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -266,7 +266,7 @@
             <a href="https://minihackatongrupo6.github.io/projeto-encontre-seu-curso/index.html" target="_blank"
               class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-FindStack.PNG" alt="Projeto Find">
+              <img src="../img/projetos/1ed/Projeto-FindStack.PNG" alt="Projeto Find">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -285,7 +285,7 @@
         <div class="winner-secundary">
           <div class="winner">
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="../img/projetos/1ed/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="text-description">
@@ -300,7 +300,7 @@
           <div class="winner">
             <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+              <img src="../img/projetos/1ed/Projeto-MpPlant.png" alt="Projeto Mp Plant">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -314,7 +314,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="../img/projetos/1ed/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -334,7 +334,7 @@
           <div class="winner">
             <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="../img/projetos/1ed/Projeto-DevEdu.png" alt="Projeto Dev Edu">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
@@ -348,7 +348,7 @@
           <div class="winner">
             <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="../img/projetos/1ed/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
@@ -362,7 +362,7 @@
           <div class="winner">
             <a href="https://fmcerqueira79.github.io/StartSe/" class="border-winner" target="_blank"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-GreenChain.jpg" alt="Projeto Green Chain">
+              <img src="../img/projetos/1ed/Projeto-GreenChain.jpg" alt="Projeto Green Chain">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
@@ -385,7 +385,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu"></div>
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-DevEdu.png" alt="Projeto Dev Edu"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/dgleyramos1/grupo7-mini-hackaton" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -410,7 +410,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
                   </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/JailsonJr-BR/Hackaton-StartSE" target="_blank">
@@ -436,7 +436,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-MpPlant.png" alt="Projeto Mp Plant">
                   </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/Yta-ux/mp_plant" target="_blank">
@@ -460,7 +460,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-GreenChain.jpg"
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-GreenChain.jpg"
                       alt="Projeto Green Chain"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/fmcerqueira79/StartSe" target="_blank">
@@ -484,7 +484,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-ItRecrutiers.PNG"
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-ItRecrutiers.PNG"
                       alt="Projeto It Recrutiers"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/GGCORDEIRO/Grupo-13.git" target="_blank">
@@ -508,7 +508,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-FindStack.PNG" alt="Projeto Find Stack">
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-FindStack.PNG" alt="Projeto Find Stack">
                   </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/MiniHackatonGrupo6/projeto-encontre-seu-curso"
@@ -536,7 +536,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-FakeNews.PNG" alt="Projeto Fake News">
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-FakeNews.PNG" alt="Projeto Fake News">
                   </div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/lRauane/Fake-news-na-saude" target="_blank">
@@ -562,7 +562,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-TechMe.jpg" alt="Projeto Tech Me"></div>
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-TechMe.jpg" alt="Projeto Tech Me"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/womoraes/Projeto-educacional.git" target="_blank">
                       <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -586,7 +586,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/projetos/Projeto-TiSolution.png"
+                  <div class="img-area"><img src="../img/projetos/1ed/Projeto-TiSolution.png"
                       alt="Projeto Ti Solution"></div>
                   <div class="all-projects-contact">
                     <a class="github" href="https://github.com/matheusOliv23/Hackthon-Startse" target="_blank">
@@ -628,7 +628,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento1.jpeg" alt="Foto de Daniel Viana">
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento1.jpeg" alt="Foto de Daniel Viana">
                   </div>
                   <div class="box-text">
                     <div class="content-text">
@@ -690,7 +690,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento2.jpg"
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento2.jpg"
                       alt="Foto de Thiago Fuhrmann"></div>
                   <div class="box-text">
                     <div class="content-text">
@@ -753,7 +753,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento3.jpg" alt="Foto de John Emerson">
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento3.jpg" alt="Foto de John Emerson">
                   </div>
                   <div class="box-text">
                     <div class="content-text">
@@ -815,7 +815,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento4.jpg" alt="Foto de Ruan Silva">
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento4.jpg" alt="Foto de Ruan Silva">
                   </div>
                   <div class="box-text">
                     <div class="content-text">
@@ -876,7 +876,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento5.jpg" alt="Foto de Ruan Silva">
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento5.jpg" alt="Foto de Ruan Silva">
                   </div>
                   <div class="box-text">
                     <div class="content-text">
@@ -937,7 +937,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento6.jpg" alt="Foto de Walison"></div>
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento6.jpg" alt="Foto de Walison"></div>
                   <div class="box-text">
                     <div class="content-text">
                       <h4>Walison de jesus </h4>
@@ -995,7 +995,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento7.jpeg" alt="Foto de Alef Santos">
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento7.jpeg" alt="Foto de Alef Santos">
                   </div>
                   <div class="box-text">
                     <div class="content-text">
@@ -1054,7 +1054,7 @@
 
               <div class="content-area">
                 <div class="content">
-                  <div class="img-area"><img src="./assets/img/depoimentos/1ed/Depoimento8.jpg" alt="Foto de Dgley Ramos">
+                  <div class="img-area"><img src="../img/depoimentos/1ed/Depoimento8.jpg" alt="Foto de Dgley Ramos">
                   </div>
                   <div class="box-text">
                     <div class="content-text">
@@ -1131,7 +1131,7 @@
           </div>
 
           <div class="border-mid-1">
-            <img src="./assets/img/contatos/filipe.png" alt="Foto de Filipe">
+            <img src="../img/contatos/filipe.png" alt="Foto de Filipe">
           </div>
           <div class="border-mid-2">
             <p>Graduando em Engenharia Mecânica na Federal de Ouro Preto, designer de UI/UX, estudando para me tornar um
@@ -1198,7 +1198,7 @@
           </div>
 
           <div class="border-mid-1">
-            <img src="./assets/img/contatos/ronaldo.jpg" alt="Foto de Ronaldo">
+            <img src="../img/contatos/ronaldo.jpg" alt="Foto de Ronaldo">
           </div>
           <div class="border-mid-2">
             <p>Técnico em programação de jogos digitais pela ETE Cícero Días. Atualmente Cursando Bacharelado em
@@ -1267,7 +1267,7 @@
           </div>
 
           <div class="border-mid-1">
-            <img src="./assets/img/contatos/george.jpg" alt="Foto de George">
+            <img src="../img/contatos/george.jpg" alt="Foto de George">
           </div>
           <div class="border-mid-2">
             <p>Técnico em Informática pelo IFS. Atualmente cursando o 2º período de Análise e Desenvolvimento de
@@ -1367,8 +1367,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Start owl Carousel -->
-  <script src="./assets/script/setup_owl.js" type="text/javascript"></script>
-  <script src="./assets/script/toggle.js" type="text/javascript"></script>
+  <script src="../script/setup_owl.js" type="text/javascript"></script>
+  <script src="../script/toggle.js" type="text/javascript"></script>
 </body>
 
 </html>
