Vencedores segunda edição

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
       <section class="category-1">
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://matheus-pontes.github.io/HackatonStartSe/src/index.html" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/2ed/HyperFinance.jpg" alt="Projeto Hyper Finance">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
-              <p>SAÚDE+</p>
+              <p>HYPER FINANCE</p>
             </div>
           </div>
         </div>
@@ -153,13 +153,13 @@
 
         <div class="winner-1">
           <div class="winner">
-            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://financeonebrasil.netlify.app/index.html" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="projeto Dev Edu">
+              <img src="./assets/img/projetos/2ed/FinanceOneBrasil.jpg" alt="projeto Finance Brasil">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
-              <p>DEV EDU</p>
+              <p>FINANCE BRASIL</p>
             </div>
 
           </div>
@@ -167,13 +167,13 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://finance-hackathon.netlify.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto MP Plant">
+              <img src="./assets/img/projetos/2ed/Finance.jpg" alt="Projeto Finance">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
-              <p>MP PLANT</p>
+              <p>FINANCE</p>
             </div>
           </div>
         </div>
@@ -188,12 +188,12 @@
         <div class="winner-secundary">
           <div class="winner">
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+              <img src="./assets/img/projetos/2ed/Finance.jpg" alt="Projeto Finance">
             </div>
-            <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://finance-hackathon.netlify.app/" target="_blank" class="border-winner"></a>
             <div class="text-description">
               <h4>2 Lugar</h4>
-              <p>MP PLANT</p>
+              <p>FINANCE</p>
             </div>
           </div>
         </div>
@@ -201,13 +201,13 @@
 
         <div class="winner-1">
           <div class="winner">
-            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://financeonebrasil.netlify.app/index.html" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/2ed/FinanceOneBrasil.jpg" alt="Projeto Finance Brasil">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
-              <p>DEV EDU</p>
+              <p>FINANCE BRASIL</p>
             </div>
 
           </div>
@@ -215,13 +215,13 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://poupador.netlify.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/2ed/PoupaDor.jpeg" alt="Projeto Poupador">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
-              <p>SAÚDE +</p>
+              <p>POUPADOR</p>
             </div>
           </div>
         </div>
@@ -235,13 +235,13 @@
       <section class="category-1">
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://financeonebrasil.netlify.app/index.html" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/2ed/FinanceOneBrasil.jpg" alt="Projeto Finance Brasil">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
-              <p>DEV EDU</p>
+              <p>FINANCE BRASIL</p>
             </div>
           </div>
         </div>
@@ -249,14 +249,14 @@
 
         <div class="winner-1">
           <div class="winner">
-            <a href="https://astounding-beignet-9fae44.netlify.app/index.html" target="_blank"
+            <a href="https://g15.netlify.app/" target="_blank"
               class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-ItRecrutiers.PNG" alt="Projeto IT Recruiters">
+              <img src="./assets/img/projetos/2ed/G15Financeira.jpg" alt="Projeto G15 Financeira">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
-              <p>IT RECRUITERS</p>
+              <p>G15 FINANCEIRA</p>
             </div>
 
           </div>
@@ -264,14 +264,14 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://minihackatongrupo6.github.io/projeto-encontre-seu-curso/index.html" target="_blank"
+            <a href="https://matheus-pontes.github.io/HackatonStartSe/src/index.html" target="_blank"
               class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-FindStack.PNG" alt="Projeto Find">
+              <img src="./assets/img/projetos/2ed/HyperFinance.jpg" alt="Projeto Hyper Finance">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
-              <p>FIND STACK</p>
+              <p>HYPER FINANCE</p>
             </div>
           </div>
         </div>
@@ -286,12 +286,12 @@
         <div class="winner-secundary">
           <div class="winner">
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/2ed/FinanceOneBrasil.jpg" alt="Projeto Finance Brasil">
             </div>
-            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://financeonebrasil.netlify.app/index.html" target="_blank" class="border-winner"></a>
             <div class="text-description">
               <h4>2 Lugar</h4>
-              <p>SAÚDE +</p>
+              <p>FINANCE BRASIL</p>
             </div>
           </div>
         </div>
@@ -299,13 +299,13 @@
 
         <div class="winner-1">
           <div class="winner">
-            <a href="https://mp-plant.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://invest-kids.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-MpPlant.png" alt="Projeto Mp Plant">
+              <img src="./assets/img/projetos/2ed/InvestKids.jpg" alt="Projeto Invest Kids">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
-              <p>MP PLANT</p>
+              <p>INVEST KIDS</p>
             </div>
 
           </div>
@@ -313,13 +313,13 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://finance-hackathon.netlify.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/2ed/Finance.jpg" alt="Projeto Finance">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
-              <p>DEV EDU</p>
+              <p>FINANCE</p>
             </div>
           </div>
         </div>
@@ -333,13 +333,13 @@
       <section class="category-1">
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://grupo7.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://invest-kids.vercel.app/" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-DevEdu.png" alt="Projeto Dev Edu">
+              <img src="./assets/img/projetos/2ed/InvestKids.jpg" alt="Projeto Invest Kids">
             </div>
             <div class="text-description">
               <h4>2 Lugar</h4>
-              <p>DEV EDU</p>
+              <p>INVEST KIDS</p>
             </div>
           </div>
         </div>
@@ -347,13 +347,13 @@
 
         <div class="winner-1">
           <div class="winner">
-            <a href="https://hackaton-start-se.vercel.app/" target="_blank" class="border-winner"></a>
+            <a href="https://financeonebrasil.netlify.app/index.html" target="_blank" class="border-winner"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-SaudeMais.jpg" alt="Projeto Saúde Mais">
+              <img src="./assets/img/projetos/2ed/FinanceOneBrasil.jpg" alt="Projeto Finance Brasil">
             </div>
             <div class="text-description">
               <h4>1 Lugar</h4>
-              <p>SAÚDE +</p>
+              <p>FINANCE BRASIL</p>
             </div>
 
           </div>
@@ -361,13 +361,13 @@
 
         <div class="winner-secundary">
           <div class="winner">
-            <a href="https://fmcerqueira79.github.io/StartSe/" class="border-winner" target="_blank"></a>
+            <a href="https://poupador.netlify.app/" class="border-winner" target="_blank"></a>
             <div class="img-winner">
-              <img src="./assets/img/projetos/Projeto-GreenChain.jpg" alt="Projeto Green Chain">
+              <img src="./assets/img/projetos/2ed/PoupaDor.jpeg" alt="Projeto Poupador">
             </div>
             <div class="text-description">
               <h4>3 Lugar</h4>
-              <p>GREEN CHAIN</p>
+              <p>POUPADOR</p>
             </div>
           </div>
         </div>
